2004-12-02  Roland McGrath  <roland@redhat.com>

	* extra-lib.mk (object-suffixes-$(lib)): Add .oS when
	$(lib)-static-only-routines is nonempty.
	(extra-objs, o-iterator.mk rule): Filter out .oS from generators.
	Add a special rule for .oS objects -> _nonshared.a library.

2004-12-01  Jakub Jelinek  <jakub@redhat.com>

	* time/mktime.c (__mktime_internal): If SEC_REQUESTED != SEC,
	convert T2, not T.
	* time/Makefile (tests): Add tst-mktime3.
	* time/tst-mktime3.c: New test.

2004-12-01  Jakub Jelinek  <jakub@redhat.com>

	* stdlib/stdlib.h (realpath): Remove nonnull attribute.

	* posix/fnmatch_loop.c (internal_fnmatch): Clear is_seqval after
	normal_bracket label.

	* time/tst-mktime2.c (bigtime_test): Initialize tm.tm_isdst to -1.

2004-12-01  Roland McGrath  <roland@redhat.com>

	* sysdeps/gnu/Makefile ($(objpfx)errlist-compat.c):
	Do $(make-target-directory).

2004-11-29  Jakub Jelinek  <jakub@redhat.com>

	* stdlib/strtod_l.c (INTERNAL (__STRTOF)): If densize > 2
	and numsize < densize, always shift num up by empty + 1
	limbs.

2004-11-29  Roland McGrath  <roland@redhat.com>

	* posix/confstr.c: Avoid punctuation in #error text.

2004-11-27  Ulrich Drepper  <drepper@redhat.com>

	* posix/Makefile (tests): Add tst-sysconf.
	* posix/tst-sysconf.c: New file.

	* posix/getconf.c (vars): Add support for _SC_IPV6 and
	_SC_RAW_SOCKETS.
	* sysdeps/posix/sysconf.c (__sysconf): Add support for _SC_IPV6
	and _SC_RAW_SOCKETS.
	* sysdeps/generic/bits/confname.h: Define _SC_IPV6 and
	_SC_RAW_SOCKETS.

2004-11-26  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/generic/unsecvars.h (UNSECURE_ENVVARS): Add GETCONF_DIR.

2004-11-26  Kaz Kojima  <kkojima@rr.iij4u.or.jp>

	* sysdeps/unix/sysv/linux/mips/pread.c: Include sgidefs.h only if
	NO_SGIDEFS_H isn't defined.  Don't include sgidefs.h twice.
	* sysdeps/unix/sysv/linux/mips/pwrite.c: Likewise.
	* sysdeps/unix/sysv/linux/mips/pread64.c: Likewise.
	* sysdeps/unix/sysv/linux/mips/pwrite64.c: Likewise.
